Remove the log message for media stream counter being 0.

When glXGetSyncValuesOML is true, we expected this counter to be non-0
and added this error to find bugs, but it has become standard behaviour
so this log is only generating noise.

R=kbr@chromium.org

Bug: 772844
Change-Id: I38377c74d45197cf33b2caf3cf81239075f8cae8