ui/gl/sync_control_vsync_provider.cc
@@ -67,11 +67,8 @@ bool SyncControlVSyncProvider::GetVSyncParametersIfAvailable(
   // associated with the surface. crbug.com/231945
   bool prev_invalid_msc = invalid_msc_;
   invalid_msc_ = (media_stream_counter == 0);
-  if (invalid_msc_) {
-    LOG_IF(ERROR, !prev_invalid_msc) << "glXGetSyncValuesOML "
-        "should not return TRUE with a media stream counter of 0.";
+  if (invalid_msc_)
     return false;
-  }
 
   struct timespec real_time;
   clock_gettime(CLOCK_REALTIME, &real_time);
